--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="54dp"
         android:id="@+id/top_layout">
 
         <TextView
@@ -42,103 +42,111 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/str_signup_hint1"
-        android:id="@+id/txt_hint_string"
-        android:gravity="center_horizontal"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_below="@+id/top_layout"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="50dp" />
-
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_hint_string"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:id="@+id/address_layout">
+        android:layout_below="@+id/top_layout"
+        android:layout_above="@+id/continue_btn">
 
         <RelativeLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
-
-            <!--<EditText-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:inputType="textPassword"-->
-            <!--android:hint="Password"-->
-            <!--android:text="123123"-->
-            <!--android:ems="10"-->
-            <!--android:id="@+id/password" />-->
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/editext_padding"
-                android:ems="10"
-                android:inputType="textEmailAddress"
-                android:text="nondefyde@gmail.com"
-                android:id="@+id/email"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center" />
+            android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:paddingBottom="@dimen/label_padding"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/str_signup_hint_email"
-                android:id="@+id/txt_email_label"
-                android:textSize="15sp"
-                android:layout_centerVertical="true" />
+                android:text="@string/str_signup_hint1"
+                android:id="@+id/txt_hint_string"
+                android:gravity="center_horizontal"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="50dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"/>
 
-            <ProgressBar
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/progressBar"
-                android:layout_centerHorizontal="true"
-                android:visibility="invisible"
-                android:indeterminate="false"
-                android:layout_gravity="center_horizontal" />
+                android:layout_below="@+id/txt_hint_string"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:id="@+id/address_layout">
+
+                <RelativeLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
+
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="@dimen/editext_padding"
+                        android:ems="10"
+                        android:inputType="textEmailAddress"
+                        android:id="@+id/email"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:paddingBottom="@dimen/label_padding"
+                        android:layout_height="wrap_content"
+                        android:text="@string/str_signup_hint_email"
+                        android:id="@+id/txt_email_label"
+                        android:textSize="15sp"
+                        android:layout_centerVertical="true" />
+
+                    <ProgressBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/progressBar"
+                        android:layout_centerHorizontal="true"
+                        android:visibility="invisible"
+                        android:indeterminate="false"
+                        android:layout_gravity="center_horizontal" />
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:paddingBottom="20dp"
+                    android:gravity="center_vertical|center_horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="OR"
+                        android:id="@+id/textView2"
+                        android:textColor="@color/white"
+                        android:textSize="15dp" />
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:id="@+id/img_twitter"
+                        android:src="@mipmap/twitter1"
+                        android:layout_marginLeft="12dp" />
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:id="@+id/img_facebook"
+                        android:src="@mipmap/facebook1"
+                        android:layout_marginLeft="12dp" />
+                </LinearLayout>
+            </LinearLayout>
+
 
         </RelativeLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:gravity="center_vertical|center_horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="OR"
-                android:id="@+id/textView2"
-                android:textColor="@color/white"
-                android:textSize="15dp" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/img_twitter"
-                android:src="@mipmap/twitter1"
-                android:layout_marginLeft="12dp" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/img_facebook"
-                android:src="@mipmap/facebook1"
-                android:layout_marginLeft="12dp" />
-        </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
     <RelativeLayout
         android:layout_width="fill_parent"
