--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -1,208 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/background">
+    android:background="@mipmap/background"
+    android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:id="@+id/top_layout">
+        android:layout_height="54dp">
 
         <TextView
+            android:id="@+id/txt_signup_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/str_signup"
-            android:id="@+id/txt_signup_label"
-            android:textColor="@color/white"
-            android:textSize="25dp"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
-            android:layout_centerHorizontal="true" />
+            android:text="@string/str_signup"
+            android:textColor="@color/white"
+            android:textSize="25dp" />
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/back_layout"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:gravity="center_vertical"
-            android:id="@+id/back_layout">
+            android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/img_close"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:id="@+id/img_close"
-                android:src="@mipmap/btn_back_arrow"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp" />
+                android:layout_marginLeft="10dp"
+                android:src="@mipmap/btn_back_arrow" />
 
             <TextView
+                android:id="@+id/txt_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/str_back"
-                android:id="@+id/txt_back"
-                android:textSize="20dp"
-                android:textColor="@color/white"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close" />
+                android:layout_toRightOf="@+id/img_close"
+                android:text="@string/str_back"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/img_help"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:id="@+id/img_help"
-            android:src="@mipmap/btn_help"
-            android:layout_marginRight="15dp"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:src="@mipmap/btn_help" />
 
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/str_signup_hint2"
-        android:id="@+id/txt_hint_string"
-        android:gravity="center_horizontal"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_below="@+id/top_layout"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="50dp" />
-
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_hint_string"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:id="@+id/address_layout">
+        android:layout_above="@+id/continue_btn"
+        android:layout_below="@+id/top_layout">
 
         <RelativeLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="123123"
-                android:ems="10"
-                android:id="@+id/password"
-                android:layout_gravity="center_horizontal"
-                android:paddingBottom="@dimen/editext_padding"
-                android:gravity="center"
-                android:inputType="textPassword" />
+            android:paddingBottom="20dp"
+            android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/txt_hint_string"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/str_signup_hint_password"
-                android:paddingBottom="@dimen/label_padding"
-                android:id="@+id/txt_password_label"
-                android:textSize="15dp"
-                android:layout_centerVertical="true" />
+                android:layout_marginBottom="50dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:gravity="center_horizontal"
+                android:text="@string/str_signup_hint2"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
-            <ProgressBar
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/address_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/progressBar"
-                android:layout_centerHorizontal="true"
-                android:visibility="invisible"
-                android:indeterminate="false"
-                android:layout_gravity="center_horizontal" />
+                android:layout_below="@+id/txt_hint_string"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:ems="10"
+                        android:gravity="center"
+                        android:inputType="textPassword"
+                        android:paddingBottom="@dimen/editext_padding"/>
+
+                    <TextView
+                        android:id="@+id/txt_password_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:paddingBottom="@dimen/label_padding"
+                        android:text="@string/str_signup_hint_password"
+                        android:textSize="15dp" />
+
+
+                </RelativeLayout>
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center_horizontal"
+                    android:indeterminate="false"
+                    android:visibility="invisible" />
+
+            </LinearLayout>
         </RelativeLayout>
-
-    </LinearLayout>
+    </ScrollView>
 
     <RelativeLayout
+        android:id="@+id/continue_btn"
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:clickable="true"
-        android:focusable="true"
         android:background="@color/button_bg"
-        android:id="@+id/continue_btn">
+        android:clickable="true"
+        android:focusable="true">
 
         <ImageView
+            android:id="@+id/img_next_arrow"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:clickable="false"
-            android:focusable="false"
-            android:id="@+id/img_next_arrow"
-            android:src="@mipmap/btn_next_arrow"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/str_continue"
-            android:id="@+id/txt_continue_label"
-            android:textSize="15dp"
+            android:layout_marginRight="10dp"
             android:clickable="false"
             android:focusable="false"
-            android:textColor="@color/white"
-            android:layout_toLeftOf="@+id/img_next_arrow"
+            android:src="@mipmap/btn_next_arrow" />
+
+        <TextView
+            android:id="@+id/txt_continue_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginRight="15dp" />
+            android:layout_marginRight="15dp"
+            android:layout_toLeftOf="@+id/img_next_arrow"
+            android:clickable="false"
+            android:focusable="false"
+            android:text="@string/str_continue"
+            android:textColor="@color/white"
+            android:textSize="15dp" />
     </RelativeLayout>
 
 </RelativeLayout>
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent">-->
-
-    <!--<LinearLayout-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="57dp"-->
-        <!--android:padding="20dp">-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-            <!--android:text="What is your password?"-->
-            <!--android:id="@+id/title"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:layout_marginBottom="20dp"-->
-            <!--android:textSize="16dp" />-->
-
-        <!--<EditText-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:inputType="textPassword"-->
-            <!--android:hint="Password"-->
-            <!--android:text="123123"-->
-            <!--android:ems="10"-->
-            <!--android:id="@+id/password" />-->
-
-        <!--<ProgressBar-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/progressBar"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:visibility="invisible"-->
-            <!--android:indeterminate="false"-->
-            <!--android:layout_gravity="center_horizontal" />-->
-
-
-    <!--</LinearLayout>-->
-
-    <!--<Button-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Continue"-->
-        <!--android:id="@+id/continue_btn"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true" />-->
-
-<!--</RelativeLayout>-->
