--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -61,9 +61,9 @@
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:layout_marginTop="40dp"
-                android:layout_marginBottom="50dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"/>
+                android:layout_marginBottom="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"/>
 
             <LinearLayout
                 android:orientation="vertical"
@@ -181,6 +181,30 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="54dp"
+        android:background="@color/alert_bg_color"
+        android:gravity="center_vertical|center_horizontal"
+        android:id="@+id/alert_valid"
+        android:visibility="visible">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/imageView2"
+            android:src="@mipmap/attention" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_alert"
+            android:textColor="@color/white"
+            android:textSize="17dp"
+            android:layout_marginLeft="25dp" />
+    </LinearLayout>
 
 
 </RelativeLayout>
