--- a/app/src/main/res/layout/fragment_sign_up_phone_fax.xml
+++ b/app/src/main/res/layout/fragment_sign_up_phone_fax.xml
@@ -74,9 +74,9 @@
                 android:id="@+id/txt_hint_string"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginBottom="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:layout_marginTop="40dp"
                 android:gravity="center_horizontal"
                 android:text="@string/str_signup_hint5"
@@ -105,8 +105,7 @@
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
                         android:gravity="center"
-                        android:paddingBottom="@dimen/editext_padding"
-                        android:text="+2340861539278" />
+                        android:paddingBottom="@dimen/editext_padding"/>
 
                     <TextView
                         android:id="@+id/txt_firstname_label"
@@ -143,8 +142,7 @@
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
                         android:gravity="center"
-                        android:paddingBottom="@dimen/editext_padding"
-                        android:text="88822233" />
+                        android:paddingBottom="@dimen/editext_padding"/>
 
                     <TextView
                         android:id="@+id/fax_label"
@@ -238,6 +236,30 @@
 
             </RelativeLayout>
         </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="54dp"
+        android:background="@color/alert_bg_color"
+        android:gravity="center_vertical|center_horizontal"
+        android:id="@+id/alert_valid"
+        android:visibility="visible">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/imageView2"
+            android:src="@mipmap/attention" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_alert"
+            android:textColor="@color/white"
+            android:textSize="17dp"
+            android:layout_marginLeft="25dp" />
     </LinearLayout>
 
 
