--- a/app/src/main/res/layout/fragment_sign_up_verify_code.xml
+++ b/app/src/main/res/layout/fragment_sign_up_verify_code.xml
@@ -72,15 +72,15 @@
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Enter Code"
+                android:text="@string/str_signup_hint20"
                 android:id="@+id/txt_hint_string"
                 android:gravity="center_horizontal"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:layout_marginTop="40dp"
-                android:layout_marginBottom="50dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"/>
+                android:layout_marginBottom="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"/>
 
             <LinearLayout
                 android:orientation="vertical"
@@ -107,17 +107,10 @@
                         android:layout_gravity="center_horizontal"
                         android:gravity="center" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/label_padding"
-                        android:text="Code"
-                        android:id="@+id/txt_firstname_label"
-                        android:textSize="15dp"
-                        android:layout_centerVertical="true" />
                 </RelativeLayout>
 
             </LinearLayout>
+
 
             <ProgressBar
                 android:layout_width="wrap_content"
@@ -164,6 +157,30 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="54dp"
+        android:background="@color/alert_bg_color"
+        android:gravity="center_vertical|center_horizontal"
+        android:id="@+id/alert_valid"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/imageView2"
+            android:src="@mipmap/attention" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_alert"
+            android:textColor="@color/white"
+            android:textSize="17dp"
+            android:layout_marginLeft="25dp" />
+    </LinearLayout>
 
 
 </RelativeLayout>
