--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,13 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="label_padding">10dp</dimen>
     <dimen name="editext_padding">18dp</dimen>
+
+    <dimen name="brother_pager_width">150dp</dimen>
+
+    <dimen name="cover_pager_height">220dp</dimen>
+
+    <dimen name="tab_height">48dp</dimen>
+
+    <dimen name="pager_margin">-30dp</dimen>
 </resources>
+
