--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -90,6 +90,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/logout"
             android:layout_weight="0.2"
             android:gravity="center_vertical|center_horizontal">
 
